--- a/src/components/rightbar/Rightbar.css
+++ b/src/components/rightbar/Rightbar.css
@@ -1,4 +1,24 @@
 .rightbar {
   flex: 3.2;
-  background-color: green;
+}
+.rightbar__wrapper {
+  padding: 20px 20px 0 0;
+}
+.birthday__container {
+  display: flex;
+  align-items: center;
+}
+.birthday__img {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+.birthday__text {
+  font-weight: 300;
+  font-size: 15px;
+}
+.rightbar__ad {
+  width: 100%;
+  border-radius: 10px;
+  margin: 30px 15px;
 }
